@@ -403,6 +403,20 @@ abstract class Skin extends ContextSource {
 	}
 
 	/**
+	 * Make a <script> tag containing global variables
+	 *
+	 * @param $unused Unused
+	 * @return string HTML fragment
+	 */
+	public static function makeGlobalVariablesScript( $unused ) {
+		global $wgOut;
+
+		wfDeprecated( __METHOD__, '1.19' );
+
+		return self::makeVariablesScript( $wgOut->getJSVars() );
+	}
+
+	/**
 	 * Get the query to generate a dynamic stylesheet
 	 *
 	 * @return array
